--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							</header>
 							
 							<ul class="actions">
-								<li><a href="#" class="button">Try out our Market sims</a></li>
+								<li><a href="prices_sim.html" class="button">Try out our Market sims</a></li>
 							</ul>
 						</section>
 
